--- a/RestEasyObjects.dproj
+++ b/RestEasyObjects.dproj
@@ -199,6 +199,7 @@
         <DCCReference Include="soaprtl.dcp"/>
         <DCCReference Include="uRestPoolerDB.pas"/>
         <DCCReference Include="uPoolerMethod.pas"/>
+        <DCCReference Include="ZLIBEX.pas"/>
         <BuildConfiguration Include="Debug">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
