Criação de novo componente o ListPoolers, para você poder consultar o Servidor quantos Poolers de Dataset tem lá e seus devidos nomes para conexão...  Isso serve para quando o usuário tem 2 ou mais Database's ele precisa de 1 Pooler por Database, então as vezes se faz necessário saber em qual pooler conectar, aí veio o ListPoolers.
git-svn-id: https://svn.code.sf.net/p/rest-dataware-componentes/dataware@63 5a50b8e4-c46e-494c-8199-665086288703

--- a/RestEasyObjectsResource.rc
+++ b/RestEasyObjectsResource.rc
@@ -1,3 +1,4 @@
 TRESTClientSQL BITMAP "TRESTClientSQL.bmp"
 TRESTDataBase BITMAP "TRESTDataBase.bmp"
 TRESTPoolerDB BITMAP "TRESTPoolerDB.bmp"
+TRESTPoolerList BITMAP "TRESTPoolerList.bmp"
