--- a/DEMO/ListPoolers.dproj
+++ b/DEMO/ListPoolers.dproj
@@ -1,7 +1,7 @@
 ﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
     <PropertyGroup>
         <ProjectGuid>{8E1CB62F-8F35-4E81-9B15-407BE4F1BA2D}</ProjectGuid>
-        <ProjectVersion>18.1</ProjectVersion>
+        <ProjectVersion>18.2</ProjectVersion>
         <FrameworkType>VCL</FrameworkType>
         <MainSource>ListPoolers.dpr</MainSource>
         <Base>True</Base>
@@ -58,14 +58,18 @@
         <DCC_K>false</DCC_K>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
+        <UWP_DelphiLogo44>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png</UWP_DelphiLogo44>
+        <UWP_DelphiLogo150>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png</UWP_DelphiLogo150>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(ModuleName);FileDescription=$(ModuleName);ProductName=$(ModuleName)</VerInfo_Keys>
         <DCC_UsePackage>DBXSqliteDriver;tmsdXE9;DBXDb2Driver;TKRBarCodeSannerPkgDXEX5;vclFireDAC;tethering;cxDataRS23;dxPSdxOCLnkRS23;UDPSuperComponents;dxSkinLondonLiquidSkyRS23;dxSkinBlackRS23;JvPluginSystem;NxLayout6Run_d10;FireDACMSSQLDriver;ACBr_NFeDanfeFR;Intraweb;dxPScxCommonRS23;dxSkinOffice2007BlueRS23;dxBarRS23;dbfprovider230;dxSkinOffice2013WhiteRS23;dxPSTeeChartRS23;lmdrtdialog;cxPivotGridChartRS23;dxSkinSummer2008RS23;dxGDIPlusRS23;FireDACDBXDriver;dxSkinFoggyRS23;ACBr_NFSeDanfseFR;dxSkinOffice2010SilverRS23;RESTBackendComponents;EmbeddedWebBrowser_XE;dxSkinDevExpressStyleRS23;dxPSPrVwRibbonRS23;NxInspector6Dsgn_d10;dxSkinWhiteprintRS23;CloudService;dxSkinOffice2013DarkGrayRS23;DataSnapClient;bindcompdbx;ACBr_TCP;IcsFmxDXE8Run;lmdrttoolsdb;cxTreeListdxBarPopupMenuRS23;VirtualTreesR;ACBr_synapse;FireDACMSAccDriver;FireDACInfxDriver;lmdrtchart;vclimg;ACBr_SPEDImportar;emshosting;dxFlowChartRS23;vclZipForged23;DBXOdbcDriver;soaprtl;DbxCommonDriver;dxSpreadSheetRS23;dxSkinOffice2007PinkRS23;soapmidas;rtl;dxSkinDevExpressDarkStyleRS23;DBXSybaseASADriver;dxSkinMetropolisDarkRS23;dxRichEditControlRS23;lmdrtprint;appanalytics;dxRibbonRS23;dxSkinOffice2007SilverRS23;dxMapControlRS23;TeeUI;frxe24;GMLib_D_Seattle10_FMX;ComparerDXE8;JvDocking;JvPascalInterpreter;VclSmp;dxPScxSchedulerLnkRS23;cxTreeListRS23;FireDACODBCDriver;ShellTreeview;GMLibEdit_D_Seattle10;JclVcl;dxRibbonCustomizationFormRS23;dxBarExtDBItemsRS23;DataSnapProviderClient;GLScene_Physics_RunTime;dxSkiniMaginaryRS23;JvControls;JvPrintPreview;lmdrtstorage;ACBr_NFSe;DataSnapServerMidas;RESTComponents;lmdrtsearch;NxStandard6Dsgn_d10;JvGlobus;dxPSDBTeeChartRS23;lmdrtl;dxSkinLiquidSkyRS23;dxdbtrRS23;dxSkinscxPCPainterRS23;DBXMSSQLDriver;JvMM;lmdrtbar;bindcompfmx;aseprovider230;JvNet;dxSkinValentineRS23;JvAppFrm;ACBr_TXTComum;emsedge;FireDACIBDriver;dxServerModeRS23;ACBr_CTeDacteFR;JvWizards;cxPageControlRS23;dbexpress;IndyCore;ZParseSql;JvPageComps;lmdrtrtlx;fmxinfopower;FireDACCommon;dxSkinOffice2010BlueRS23;dxSkinVS2010RS23;dxSkinMetropolisRS23;DataSnapConnectors;lmdrtelcore;cxVerticalGridRS23;ACBR_DeSTDA;cxGridRS23;SampleListViewRatingsAppearancePackage;JvCmp;DBXMySQLDriver;ACBr_Sintegra;FireDACCommonDriver;ACBr_GNRE;inet;JvCustom;dxDockingRS23;tmsxlsdXE9;dxSkinOffice2007GreenRS23;JvXPCtrls;NxInspector6Run_d10;dxSkinsCoreRS23;dxSkinsdxRibbonPainterRS23;dxSkinMoneyTwinsRS23;dxtrmdRS23;FireDAC;dacvcl230;dxFireDACServerModeRS23;dxSkinBlueRS23;FireDACSqliteDriver;ibmonitor;accessprovider230;FireDACASADriver;cxEditorsRS23;dxSkinGlassOceansRS23;JvDlgs;JvRuntimeDesign;cxPivotGridOLAPRS23;DataSnapServer;lmdrtrtfdb;vclwinx;NxDBGrid6Run_d10;lmdrtscript;frxTee24;CustomIPTransport;pgprovider230;TMSFMXPackPkgDXE10;bindcomp;fgx;ZPlain;DBXInformixDriver;dxPSdxGaugeControlLnkRS23;ExportClass;dbxcds;ACBr_NFCeECFVirtual;adortl;ACBr_BoletoFR;frxDB24;dxComnRS23;dsnapxml;cxExportRS23;dxSkinVisualStudio2013DarkRS23;vclMsgComDX10;RestEasyObjects;dxCoreRS23;vclactnband;dxPSdxLCLnkRS23;dxPSLnksRS23;fs24;lmdrtplugin;liteprovider230;dxTabbedMDIRS23;FireDACADSDriver;RaizeComponentsVclDb230;dxDBXServerModeRS23;dxHttpIndyRequestRS23;dxPScxGridLnkRS23;cxSchedulerRS23;vcltouch;ACBr_NFe;JvBands;vcldb;lmdrtchartdb;svn;dxWizardControlRS23;dxSkinMcSkinRS23;JvJans;ACBr_NFeDanfeESCPOS;cxSchedulerRibbonStyleEventEditorRS23;JvDotNetCtrls;crcontrols230;cxLibraryRS23;frx24;vclib;dxSkinVisualStudio2013LightRS23;lmdrttools;lmdrtrtf;dxPSdxDBOCLnkRS23;dxSkinDarkSideRS23;dxSkinSevenRS23;dclZipForged23;vclx;lmdrtelpro;dxdborRS23;dxLayoutControlRS23;VCLRESTComponents;vclie;bindengine;ACBr_PAF;FireDACMySQLDriver;JvHMI;ACBr_SATECFVirtual;dxPScxPCProdRS23;DBXSybaseASEDriver;IndyIPServer;dxSkinPumpkinRS23;ACBr_CTe;IndySystem;odbcprovider230;IcsVclDXE8Run;GLScene_RunTime;NxDBGrid6Dsgn_d10;dsnapcon;oraprovider230;fmxFireDAC;dxSkinLilianRS23;Jcl;tmsexdXE9;ACBr_SPED;lmdrttxt;ACBr_MDFe;GLScene_Cg_RunTime;dxBarDBNavRS23;ACBr_LFD;dxSkinOffice2016ColorfulRS23;FireDACTDataDriver;FMXTee;GMLib_D_Seattle10;GLScene_Parallel_RunTime;NxGrid6Run_d10;unidac230;GMLib_D_Seattle10_VCL;QRWRunDXE10_1_w64;JvManagedThreads;dxPSdxSpreadSheetLnkRS23;xmlrtl;DataSnapNativeClient;dxSkinTheAsphaltWorldRS23;fmxobj;dxSkinHighContrastRS23;dxSkinSevenClassicRS23;JvTimeFramework;db2provider230;DbxClientDriver;dxNavBarRS23;NxGrid6Dsgn_d10;JvSystem;SampleListViewMultiDetailAppearancePackage;JvStdCtrls;ACBr_Convenio115;lmdrtdocking;cxPivotGridRS23;dxSkinsdxDLPainterRS23;IndyIPClient;dxPScxVGridLnkRS23;bindcompvcl;lmdrtsyntax;dxPScxTLLnkRS23;vc2;lmdrttxtdb;NxCollection6Dsgn_d10;DataSnapIndy10ServerTransport;dxPSRichEditControlLnkRS23;ACBr_Boleto;lmdrtscriptimp;ACBr_SEF2;FireDACMongoDBDriver;dxSpellCheckerRS23;dxSkinsdxBarPainterRS23;lmdrtshell;NxCollection6Run_d10;ACBr_MDFeDamdfeFR;dxSkinCoffeeRS23;lmdrtweb;ZComponent;DBXInterBaseDriver;ACBr_TEFD;ZCore;dxADOServerModeRS23;emsclientfiredac;DataSnapFireDAC;svnui;dxmdsRS23;myprovider230;GLScene_Sounds_RunTime;dxSkinSpringTimeRS23;dxPSCoreRS23;bmsPack_D6;dxSkinXmas2008BlueRS23;DatasnapConnectorsFreePascal;compack;lmdrteldb;DBXOracleDriver;dxSkinSilverRS23;inetdb;dac230;ACBr_Diversos;ACBr_GNREGuiaFR;FmxTeeUI;dxBarExtItemsRS23;fmx;fmxdae;dxPsPrVwAdvRS23;dxSkinOffice2010BlackRS23;ibprovider230;dxSkinStardustRS23;cxSchedulerGridRS23;ACBr_Ponto;dxSkinSharpPlusRS23;dsnap;DataSnapCommon;emsclient;JvDB;ACBr_PCNComum;soapserver;ACBr_SAT;dxSkinCaramelRS23;dxTileControlRS23;IcsCommonDXE8Run;JclDeveloperTools;lmdrtinspector;lmdrtfx;FireDACOracleDriver;DBXFirebirdDriver;unidacfmx230;lmdrtsearchdb;FireDACCommonODBC;IndyIPCommon;dxSkinDarkRoomRS23;vcl;dxPScxExtCommonRS23;ACBr_SATExtratoESCPOS;FireDACDb2Driver;dxThemeRS23;adsprovider230;acntDX10Berlin_R;dxSkinVisualStudio2013BlueRS23;tmswizdXE9;dacfmx230;lmdrtsys;dxPSdxFCLnkRS23;ZDbc;TeeDB;cxSchedulerTreeBrowserRS23;JvCore;ACBr_Comum;RaizeComponentsVcl230;JvCrypt;FireDACPgDriver;NxStandard6Run_d10;dxSkinsdxNavBarPainterRS23;dxGaugeControlRS23;ibxpress;Tee;dxSkinSharpRS23;ibxbindings;TMSFMXZBarReaderPkgDXE7;FireDACDSDriver;ACBr_OpenSSL;dxSkinBlueprintRS23;dxSkinOffice2007BlackRS23;ACBr_DFeComum;vcldsnap;dxSkinOffice2013LightGrayRS23;ACBr_Serial;unidacvcl230;dxPScxPivotGridLnkRS23;dxorgcRS23;ACBr_BlocoX;dxPSdxDBTVLnkRS23;dbrtl;inetdbxpress;IndyProtocols;dxSkinOffice2016DarkRS23;JclContainers;ACBr_MTER;dxSkinscxSchedulerPainterRS23;lmdrtcore;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
         <VerInfo_Locale>1033</VerInfo_Locale>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64)'!=''">
+        <UWP_DelphiLogo150>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_150.png</UWP_DelphiLogo150>
+        <UWP_DelphiLogo44>$(BDS)\bin\Artwork\Windows\UWP\delphi_UwpDefault_44.png</UWP_DelphiLogo44>
         <DCC_UsePackage>DBXSqliteDriver;tmsdXE9;DBXDb2Driver;vclFireDAC;tethering;cxDataRS23;dxPSdxOCLnkRS23;UDPSuperComponents;dxSkinLondonLiquidSkyRS23;dxSkinBlackRS23;NxLayout6Run_d10;FireDACMSSQLDriver;Intraweb;dxPScxCommonRS23;dxSkinOffice2007BlueRS23;dxBarRS23;dxSkinOffice2013WhiteRS23;dxPSTeeChartRS23;lmdrtdialog;cxPivotGridChartRS23;dxSkinSummer2008RS23;dxGDIPlusRS23;FireDACDBXDriver;dxSkinFoggyRS23;dxSkinOffice2010SilverRS23;RESTBackendComponents;dxSkinDevExpressStyleRS23;dxPSPrVwRibbonRS23;dxSkinWhiteprintRS23;CloudService;dxSkinOffice2013DarkGrayRS23;DataSnapClient;bindcompdbx;IcsFmxDXE8Run;lmdrttoolsdb;cxTreeListdxBarPopupMenuRS23;VirtualTreesR;FireDACMSAccDriver;FireDACInfxDriver;lmdrtchart;vclimg;emshosting;dxFlowChartRS23;vclZipForged23;DBXOdbcDriver;soaprtl;DbxCommonDriver;dxSpreadSheetRS23;dxSkinOffice2007PinkRS23;soapmidas;rtl;dxSkinDevExpressDarkStyleRS23;DBXSybaseASADriver;dxSkinMetropolisDarkRS23;dxRichEditControlRS23;lmdrtprint;appanalytics;dxRibbonRS23;dxSkinOffice2007SilverRS23;dxMapControlRS23;TeeUI;GMLib_D_Seattle10_FMX;VclSmp;dxPScxSchedulerLnkRS23;cxTreeListRS23;FireDACODBCDriver;ShellTreeview;dxRibbonCustomizationFormRS23;dxBarExtDBItemsRS23;DataSnapProviderClient;dxSkiniMaginaryRS23;lmdrtstorage;DataSnapServerMidas;RESTComponents;lmdrtsearch;dxPSDBTeeChartRS23;lmdrtl;dxSkinLiquidSkyRS23;dxdbtrRS23;dxSkinscxPCPainterRS23;DBXMSSQLDriver;lmdrtbar;bindcompfmx;dxSkinValentineRS23;emsedge;FireDACIBDriver;dxServerModeRS23;cxPageControlRS23;dbexpress;IndyCore;ZParseSql;lmdrtrtlx;fmxinfopower;FireDACCommon;dxSkinOffice2010BlueRS23;dxSkinVS2010RS23;dxSkinMetropolisRS23;DataSnapConnectors;lmdrtelcore;cxVerticalGridRS23;cxGridRS23;DBXMySQLDriver;FireDACCommonDriver;inet;dxDockingRS23;dxSkinOffice2007GreenRS23;NxInspector6Run_d10;dxSkinsCoreRS23;dxSkinsdxRibbonPainterRS23;dxSkinMoneyTwinsRS23;dxtrmdRS23;FireDAC;dxFireDACServerModeRS23;dxSkinBlueRS23;FireDACSqliteDriver;ibmonitor;FireDACASADriver;cxEditorsRS23;dxSkinGlassOceansRS23;cxPivotGridOLAPRS23;DataSnapServer;lmdrtrtfdb;vclwinx;NxDBGrid6Run_d10;lmdrtscript;CustomIPTransport;pgprovider230;bindcomp;fgx;ZPlain;DBXInformixDriver;dxPSdxGaugeControlLnkRS23;ExportClass;dbxcds;adortl;dxComnRS23;dsnapxml;cxExportRS23;dxSkinVisualStudio2013DarkRS23;RestEasyObjects;dxCoreRS23;vclactnband;dxPSdxLCLnkRS23;dxPSLnksRS23;lmdrtplugin;liteprovider230;dxTabbedMDIRS23;FireDACADSDriver;dxDBXServerModeRS23;dxHttpIndyRequestRS23;dxPScxGridLnkRS23;cxSchedulerRS23;vcltouch;vcldb;lmdrtchartdb;dxWizardControlRS23;dxSkinMcSkinRS23;cxSchedulerRibbonStyleEventEditorRS23;crcontrols230;cxLibraryRS23;vclib;dxSkinVisualStudio2013LightRS23;lmdrttools;lmdrtrtf;dxPSdxDBOCLnkRS23;dxSkinDarkSideRS23;dxSkinSevenRS23;vclx;lmdrtelpro;dxdborRS23;dxLayoutControlRS23;VCLRESTComponents;vclie;bindengine;FireDACMySQLDriver;dxPScxPCProdRS23;DBXSybaseASEDriver;IndyIPServer;dxSkinPumpkinRS23;IndySystem;IcsVclDXE8Run;dsnapcon;fmxFireDAC;dxSkinLilianRS23;tmsexdXE9;lmdrttxt;dxBarDBNavRS23;dxSkinOffice2016ColorfulRS23;FireDACTDataDriver;FMXTee;GMLib_D_Seattle10;NxGrid6Run_d10;unidac230;GMLib_D_Seattle10_VCL;QRWRunDXE10_1_w64;dxPSdxSpreadSheetLnkRS23;xmlrtl;DataSnapNativeClient;dxSkinTheAsphaltWorldRS23;fmxobj;dxSkinHighContrastRS23;dxSkinSevenClassicRS23;DbxClientDriver;dxNavBarRS23;lmdrtdocking;cxPivotGridRS23;dxSkinsdxDLPainterRS23;IndyIPClient;dxPScxVGridLnkRS23;bindcompvcl;lmdrtsyntax;dxPScxTLLnkRS23;lmdrttxtdb;DataSnapIndy10ServerTransport;dxPSRichEditControlLnkRS23;lmdrtscriptimp;FireDACMongoDBDriver;dxSpellCheckerRS23;dxSkinsdxBarPainterRS23;lmdrtshell;NxCollection6Run_d10;dxSkinCoffeeRS23;lmdrtweb;ZComponent;DBXInterBaseDriver;ZCore;dxADOServerModeRS23;emsclientfiredac;DataSnapFireDAC;dxmdsRS23;dxSkinSpringTimeRS23;dxPSCoreRS23;dxSkinXmas2008BlueRS23;DatasnapConnectorsFreePascal;lmdrteldb;DBXOracleDriver;dxSkinSilverRS23;inetdb;dac230;FmxTeeUI;dxBarExtItemsRS23;fmx;fmxdae;dxPsPrVwAdvRS23;dxSkinOffice2010BlackRS23;dxSkinStardustRS23;cxSchedulerGridRS23;dxSkinSharpPlusRS23;dsnap;DataSnapCommon;emsclient;soapserver;dxSkinCaramelRS23;dxTileControlRS23;IcsCommonDXE8Run;lmdrtinspector;lmdrtfx;FireDACOracleDriver;DBXFirebirdDriver;unidacfmx230;lmdrtsearchdb;FireDACCommonODBC;IndyIPCommon;dxSkinDarkRoomRS23;vcl;dxPScxExtCommonRS23;FireDACDb2Driver;dxThemeRS23;dxSkinVisualStudio2013BlueRS23;lmdrtsys;dxPSdxFCLnkRS23;ZDbc;TeeDB;cxSchedulerTreeBrowserRS23;FireDACPgDriver;NxStandard6Run_d10;dxSkinsdxNavBarPainterRS23;dxGaugeControlRS23;ibxpress;Tee;dxSkinSharpRS23;ibxbindings;FireDACDSDriver;dxSkinBlueprintRS23;dxSkinOffice2007BlackRS23;vcldsnap;dxSkinOffice2013LightGrayRS23;dxPScxPivotGridLnkRS23;dxorgcRS23;dxPSdxDBTVLnkRS23;dbrtl;inetdbxpress;IndyProtocols;dxSkinOffice2016DarkRS23;dxSkinscxSchedulerPainterRS23;lmdrtcore;fmxase;$(DCC_UsePackage)</DCC_UsePackage>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
@@ -127,27 +131,12 @@
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
+                <DeployClass Name="ProjectiOSDeviceResourceRules">
                     <Platform Name="iOSDevice64">
                         <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <RemoteDir>Contents\MacOS</RemoteDir>
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
                     </Platform>
                     <Platform Name="iOSDevice32">
                         <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                    <Platform Name="iOSSimulator">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
                     </Platform>
                 </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
@@ -231,6 +220,14 @@
                         <RemoteDir>Contents\MacOS</RemoteDir>
                         <Operation>1</Operation>
                         <Extensions>.framework</Extensions>
+                    </Platform>
+                </DeployClass>
+                <DeployClass Name="ProjectUWPManifest">
+                    <Platform Name="Win32">
+                        <Operation>1</Operation>
+                    </Platform>
+                    <Platform Name="Win64">
+                        <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
                 <DeployClass Name="iPhone_Launch640">
@@ -345,6 +342,16 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
+                <DeployClass Name="UWP_DelphiLogo44">
+                    <Platform Name="Win32">
+                        <RemoteDir>Assets</RemoteDir>
+                        <Operation>1</Operation>
+                    </Platform>
+                    <Platform Name="Win64">
+                        <RemoteDir>Assets</RemoteDir>
+                        <Operation>1</Operation>
+                    </Platform>
+                </DeployClass>
                 <DeployClass Name="ProjectiOSEntitlements">
                     <Platform Name="iOSDevice64">
                         <RemoteDir>..\</RemoteDir>
@@ -376,6 +383,16 @@
                 <DeployClass Name="ProjectOSXEntitlements">
                     <Platform Name="OSX32">
                         <RemoteDir>..\</RemoteDir>
+                        <Operation>1</Operation>
+                    </Platform>
+                </DeployClass>
+                <DeployClass Name="UWP_DelphiLogo150">
+                    <Platform Name="Win32">
+                        <RemoteDir>Assets</RemoteDir>
+                        <Operation>1</Operation>
+                    </Platform>
+                    <Platform Name="Win64">
+                        <RemoteDir>Assets</RemoteDir>
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
@@ -498,12 +515,27 @@
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="ProjectiOSDeviceResourceRules">
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
                     <Platform Name="iOSDevice64">
                         <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <RemoteDir>Contents\MacOS</RemoteDir>
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
                     </Platform>
                     <Platform Name="iOSDevice32">
                         <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                    <Platform Name="iOSSimulator">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
                     </Platform>
                 </DeployClass>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
